--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>競技かるた判別アプリ</h1>
-    <video id="camera" autoplay></video>
+    <video id="camera" autoplay></video><br>
     <button id="capture">判別する</button>
     <div id="result">ここに結果が表示されます</div>
     <script src="javascript/script.js"></script>
