--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>競技かるた判別アプリ</title>
     <link rel="stylesheet" href="css/style.css">
     <!-- v5 -->
-    <script src='https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js'></script>
+     <!-- v5 -->
+<script src='https://cdn.jsdelivr.net/npm/tesseract.js@5/dist/tesseract.min.js'></script>
+<script src="https://docs.opencv.org/3.4.1/opencv.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/tesseract.js@3.1.0/dist/tesseract.min.js"></script> -->
 </head>
 <body>
     <h1>競技かるた判別アプリ</h1>
